--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chainstack-covalent-sdk",
-  "version": "1.0.2",
-  "description": "An SDK designed to streamline the process of developing using the integration of Chainstack with Covalent APIs, enhancing the ease of use and efficiency.",
+  "version": "1.0.6",
+  "description": "An SDK designed to streamline the process of developing using the integration of Chainstack with Covalent APIs, enhancing the ease of use and efficiency",
   "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
